--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,7 @@
 
   <button ion-button (click)="submit()">save</button>
   <br>
-  <button ion-button (click)="getData()">get data</button>
+  <!-- <button ion-button (click)="getData()">get data</button> -->
 
   <ion-list *ngFor="let item of allDetails">
     <ion-item>
